# Maritime-OSINT-sentry

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.monitoring.yml  docker-compose.yml  insert_mock_events.py  main.py  package-lock.json  package.json  pyproject.toml  requirements-lite.txt  requirements.txt  schema.sql  test_ais_connection.py  test_db.py  test_pipeline.py  test_ws.js  test_ws2.js
.github/workflows/: build-desktop.yml  cd.yml  ci.yml
backend/: __init__.py  ais_proxy.js  config.py  database.py  main.py  websocket.py
backend/routers/: __init__.py  aircraft.py  alerts.py  collision.py  data.py  events.py  health.py  history.py  metrics.py  route.py  satellites.py  sentinel.py  ships.py  weather.py
backend/services/: aircraft_tracker.py  ais_stream.py  collision_analyzer.py  data_fetcher.py  history_writer.py  land_filter.py  metrics.py  network_utils.py  port_search.py  satellite_tracker.py  sentinel_search.py  stream_consumer.py  stream_producer.py
deploy/: .env.prod.example  Caddyfile  backup.sh  docker-compose.prod.yml  prometheus.prod.yml  setup-server.sh
electron/: main.js  package-lock.json  package.json  preload-setup.js  setup.html  splash.html
monitoring/: prometheus.yml
static/: index.html
static/css/: main.css
static/js/: app.js  charts.js  collision.js  (+15 more)
tests/: conftest.py  test_ais_class.py  test_collision_class_thresholds.py  test_collision_land_filter.py  test_health.py  test_land_filter.py  test_metrics.py  test_port_search.py  test_route_api.py  test_stream_consumer.py  test_stream_producer.py
(+23 files in other folders)
